remove bug whitespace below banner

--- a/github_pages/main.css
+++ b/github_pages/main.css
@@ -12,7 +12,6 @@
   height: 875px;
   opacity:.90;
   /*-webkit-clip-path: polygon(0 0%, 100% 0, 100% 100%, 0% 90%);poloygon cut*/
-  overflow: hidden;
 }
 
 /* keep words in background image relative*/
